--- a/house-demo/pom.xml
+++ b/house-demo/pom.xml
@@ -14,12 +14,19 @@
 	<name>house-demo</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>11</java.version>
+		<!--  <java.version>1.8</java.version>-->
 	</properties>
+	<packaging>war</packaging>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<exclusions>
+		    <exclusion>
+		      <groupId>org.springframework.boot</groupId>
+		      <artifactId>spring-boot-starter-tomcat</artifactId>
+		    </exclusion>
+		  </exclusions>
 		</dependency>
 
 		<dependency>
@@ -32,7 +39,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
-		
+		<dependency>
+		  <groupId>javax.servlet</groupId>
+		  <artifactId>javax.servlet-api</artifactId>
+		  <scope>provided</scope>
+		</dependency>
+		<!-- Exclude any jul-to-slf4j -->
+		<dependency>
+		  <groupId>org.slf4j</groupId>
+		  <artifactId>jul-to-slf4j</artifactId>
+		  <scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -40,6 +57,15 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+			  <groupId>com.google.cloud.tools</groupId>
+			  <artifactId>appengine-maven-plugin</artifactId>
+			  <version>2.2.0</version>
+			  <configuration>
+			    <projectId>house-demo-20210615</projectId>
+			    <version>GCLOUD_CONFIG</version>
+			  </configuration>
 			</plugin>
 		</plugins>
 	</build>
